--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-carousel": "^0.18.0",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
